example/errors/interpret/array_has_multiple_type.box
//set arr: [int] = [true, false, 1, ""];

set matrix: [[int]] = [[true, false], [true]];
